# src/controllers/utilizador.controller.js
@@ -40,20 +40,38 @@ exports.UtilizadorController = void 0;
 var app_data_source_1 = require("../app-data-source");
 var utilizador_1 = require("../entity/utilizador");
 var encrypt_1 = require("../helpers/encrypt");
+var tokenSender_1 = require("../helpers/tokenSender");
 var user_dto_1 = require("../dto/user.dto");
 var cache = require("memory-cache");
+var validate = require('deep-email-validator').validate;
 var UtilizadorController = /** @class */ (function () {
     function UtilizadorController() {
     }
     UtilizadorController.signUp = function (req, res) {
         return __awaiter(this, void 0, void 0, function () {
-            var _a, first_name, last_name, email, password, admin, encryptedPassword, utilizador, utilizadorRep, userEmail, userDataSent, token;
+            var _a, first_name, last_name, email, password, verificacao_pw, admin, resultado, encryptedPassword, utilizador, utilizadorRep, userEmail, userDataSent, token;
             return __generator(this, function (_b) {
                 switch (_b.label) {
                     case 0:
-                        _a = req.body, first_name = _a.first_name, last_name = _a.last_name, email = _a.email, password = _a.password, admin = _a.admin;
-                        return [4 /*yield*/, encrypt_1.encrypt.encryptpass(password)];
+                        _a = req.body, first_name = _a.first_name, last_name = _a.last_name, email = _a.email, password = _a.password, verificacao_pw = _a.verificacao_pw, admin = _a.admin;
+                        return [4 /*yield*/, validate(email)];
                     case 1:
+                        resultado = _b.sent();
+                        if (!resultado.valid) {
+                            return [2 /*return*/, res.status(400).send({
+                                    status: 'error',
+                                    message: 'Endereço de email inválido!',
+                                    reason: resultado.reason
+                                })];
+                        }
+                        if (password != verificacao_pw) {
+                            return [2 /*return*/, res.status(400).json({
+                                    status: 'error',
+                                    message: 'Passwords diferentes!'
+                                })];
+                        }
+                        return [4 /*yield*/, encrypt_1.encrypt.encryptpass(password)];
+                    case 2:
                         encryptedPassword = _b.sent();
                         utilizador = new utilizador_1.Utilizador();
                         utilizador.first_name = first_name;
@@ -63,24 +81,27 @@ var UtilizadorController = /** @class */ (function () {
                         utilizador.admin = admin;
                         utilizadorRep = app_data_source_1.myDataSource.getRepository(utilizador_1.Utilizador);
                         return [4 /*yield*/, utilizadorRep.findOne({ where: { email: email } })];
-                    case 2:
+                    case 3:
                         userEmail = _b.sent();
-                        if (!userEmail) return [3 /*break*/, 3];
+                        if (!userEmail) return [3 /*break*/, 4];
                         return [2 /*return*/, res.json({ message: "Email já se encontra registado!" })];
-                    case 3: return [4 /*yield*/, utilizadorRep.create(utilizador)];
-                    case 4:
-                        _b.sent();
-                        return [4 /*yield*/, utilizadorRep.save(utilizador)];
+                    case 4: return [4 /*yield*/, utilizadorRep.create(utilizador)];
                     case 5:
                         _b.sent();
-                        _b.label = 6;
+                        return [4 /*yield*/, utilizadorRep.save(utilizador)];
                     case 6:
+                        _b.sent();
+                        _b.label = 7;
+                    case 7:
                         userDataSent = new user_dto_1.UserResponse();
                         userDataSent.name = utilizador.first_name;
                         userDataSent.email = utilizador.email;
                         userDataSent.role = utilizador.admin;
                         token = encrypt_1.encrypt.generateToken({ id: utilizador.id.toString() });
-                        return [2 /*return*/, res.status(200).json({ message: "Utilizador criado com sucesso", token: token, userDataSent: userDataSent })];
+                        return [4 /*yield*/, (0, tokenSender_1.sendEmail)(utilizador.email, token)];
+                    case 8:
+                        _b.sent();
+                        return [2 /*return*/, res.status(200).json({ message: "Utilizador criado com sucesso", userDataSent: userDataSent })];
                 }
             });
         });
